increased the length of some string fields

--- a/Products/CMFBibliographyAT/docs/ChangeLog
+++ b/Products/CMFBibliographyAT/docs/ChangeLog
@@ -1,3 +1,6 @@
+unrelesed Andreas Jung <info@zopyx.com>
+	* increased the length of some string fields for better usability
+
 2009-12-03  Andreas Jung <info@zopyx.com>
     * 1.0.0 alpha 1
 
