--- a/Products/CMFBibliographyAT/docs/ChangeLog
+++ b/Products/CMFBibliographyAT/docs/ChangeLog
@@ -1,5 +1,7 @@
-unrelesed Andreas Jung <info@zopyx.com>
+unreleased Andreas Jung <info@zopyx.com>
 	* increased the length of some string fields for better usability
+	* migration code for PMID
+	* relaxed some test due to test failures (XML BOM)
 
 2009-12-03  Andreas Jung <info@zopyx.com>
     * 1.0.0 alpha 1
