--- a/Products/CMFBibliographyAT/tests/medline_test.bib
+++ b/Products/CMFBibliographyAT/tests/medline_test.bib
@@ -8,8 +8,8 @@
   volume = {90},
   number = {2},
   pages = {130-5},
-  pmid = {12634818},
-  note = {automatic medline import}
+  note = {automatic medline import},
+  pmid = {12634818}
 }
 
 @Article{AlibardiThompson2003,
@@ -21,8 +21,8 @@
   volume = {256},
   number = {1},
   pages = {29-41},
-  pmid = {12616573},
-  note = {automatic medline import}
+  note = {automatic medline import},
+  pmid = {12616573}
 }
 
 @Article{CokeEtAl2003,
@@ -34,8 +34,8 @@
   volume = {64},
   number = {2},
   pages = {225-8},
-  pmid = {12602593},
-  note = {automatic medline import}
+  note = {automatic medline import},
+  pmid = {12602593}
 }
 
 @Article{TrapeMane2002,
@@ -47,6 +47,6 @@
   volume = {95},
   number = {3},
   pages = {148-50},
-  pmid = {12404856},
-  note = {automatic medline import}
+  note = {automatic medline import},
+  pmid = {12404856}
 }
