german month names

--- a/Products/CMFBibliographyAT/i18n/plone-de.po
+++ b/Products/CMFBibliographyAT/i18n/plone-de.po
@@ -292,3 +292,39 @@ msgstr "Publikation im PDF-Format"
 #. Default: "Bibliography Search"
 msgid "Bibliography Search"
 msgstr "Bibliographiesuche"
+
+msgid "January"
+msgstr "Januar"
+
+msgid "February"
+msgstr "Februar" 
+
+msgid "March"
+msgstr "März"
+
+msgid "April"
+msgstr "April"
+
+msgid "May"
+msgstr "Mai"
+
+msgid "June"
+msgstr "Juni"
+
+msgid "July"
+msgstr "Juli"
+
+msgid "August"
+msgstr "August"
+
+msgid "September"
+msgstr "September"
+
+msgid "October"
+msgstr "Oktober"
+
+msgid "November"
+msgstr "November"
+
+msgid "December"
+msgstr "Dezember"
