--- a/Products/CMFBibliographyAT/tests/bibtex_test.bib
+++ b/Products/CMFBibliographyAT/tests/bibtex_test.bib
@@ -56,6 +56,7 @@
   support. There are many developers, writers and testers from all over the world,
   contributing to Plone everyday. Plone is based on the Content Management Framework.},
   year =   2003,
+  month = {Feb},
   note =   {unfinished but already quite substantial},
   annote = {I really like it.}
 }
