--- a/Products/CMFBibliographyAT/docs/HISTORY.txt
+++ b/Products/CMFBibliographyAT/docs/HISTORY.txt
@@ -1,3 +1,6 @@
+Pre-V 1.0 changes
+-----------------
+
 2006-01-05  Mike Gabriel <m.gabriel@sunweavers.net>
 
     * i18n files for de/en are done and should be always co-maintained
