--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,9 +1,12 @@
-1.0.0b2 (unreleased)
+1.0.0b2 (2010-01-20)
 --------------------
 
 * removed "docs" tab from configuration panel (since it was empty)
 * added portal_properties/cmfbibat_properties as replacement for persistent 
   perferences for parsers/renderers
+* added updateProperty(), getProperty(), isParserEnabled(), isRendererEnabled()
+  methods to portal_bibliography
+* fixed several forms dealing with the parser/renderer preferences
 
 1.0.0b1 (2010-01-10)
 --------------------
