fixed API name clash

--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,7 @@
+1.0.0b3 (2010-01-20)
+--------------------
+* fixed API name clash for getProperty()
+
 1.0.0b2 (2010-01-20)
 --------------------
 
