--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,9 @@
+1.0.0b7 (2010-01-29)
+--------------------
+* re-added selection for input encoding on the import form
+* added through-the-ZMI property portal_properties -> extensions_properties -> available_input_encodings
+* added strong encoding check for uploaded data
+
 1.0.0b6 (2010-01-28)
 --------------------
 * using UTF-8 output encoding for all renderers except BibTeX (ASCII/LaTeX notation)
