--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,9 @@
+1.0.0b9 (unreleased)
+--------------------
+* moved encoding checks directly into checkEncoding()
+* handling UTF-8 BOM properly
+* removed encoding guessing code - explicit is better than implicit
+
 1.0.0b8 (2010-01-29)
 --------------------
 * minor but critical bugfix in input encoding checker
