--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,7 @@
+1.0.0b10 (unreleased)
+---------------------
+* fixed all unittests
+
 1.0.0b9 (2010-01-30)
 --------------------
 * moved encoding checks directly into checkEncoding()
