--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,7 @@
+1.0.0c1 (2010-03-03)
+====================
+* release candidate
+
 1.0.0b13 (2010-02-16)
 ---------------------
 * suffix for generated Endnote exports must be '.enw', not '.end'
