--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,7 @@
+1.0.0c2 (2010-03-09)
+====================
+* fixed COINS data for article reference (jtitle -> title)
+
 1.0.0c1 (2010-03-03)
 ====================
 * release candidate
