--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,7 @@
+1.0.0 (2010-03-19)
+==================
+* final release
+
 1.0.0c2 (2010-03-09)
 ====================
 * fixed COINS data for article reference (jtitle -> title)
