--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,8 @@
+1.0.1 (2010-03-22)
+==================
+* removed stupid role check from bibliograph_search.pt which made
+  the bibliographic search unusable for anonymous users
+
 1.0.0 (2010-03-19)
 ==================
 * final release
