--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,7 @@
+1.1.0b2 (2010/05/10)
+====================
+* fixed missing import
+
 1.1.0b1 (2010/05/10)
 ====================
 * compatibility with Plone 3 + Plone 4 
