--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,7 @@
+1.1.0 (2010/07/05)
+====================
+* final 1.1.0 release
+
 1.1.0b8 (2010/07/05)
 ====================
 * fixed handling of non-ascii characters in author names due to incompatible
