compatiblity with Plone 4.0rc1

--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,3 +1,7 @@
+1.1.1 (2010/08/22)
+====================
+* compatiblity with Plone 4.0rc
+
 1.1.0 (2010/07/05)
 ====================
 * final 1.1.0 release
