--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,6 +1,10 @@
 1.1.2 (unreleased)
 ====================
 
+* fixed import report on write too. Same problem with fullname: it can be 
+  unicode.
+  [jensens]
+
 * fixed import report: for some reson the new report might be uniocde, (maybe in
   Plone 4 username or email is unicode?) but merging it with the old report 
   before stroing it failed: old report is utf8 so convert unicode to utf8 if 
