--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -2,6 +2,7 @@
 ==================
 
 * fix migration [kiorky]
+* handle some utf-8 decode problems [kiorky]
 
 1.1.2 (2011/07/11)
 ==================
